tests/e2e-openshift/route/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: route
spec:
  namespace: chainsaw-route
  steps:
  - name: Install Minio storage
    try:
    - apply:
        file: 00-install-storage.yaml
    - assert:
        file: 00-install-storage-assert.yaml
  - name: Install TempoStack with ingress type route
    try:
    - apply:
        file: 01-install-tempo.yaml
    - assert:
        timeout: 5m
        file: 01-install-tempo-assert.yaml
    catch:
    - get:
        apiVersion: tempo.grafana.com/v1alpha1
        kind: TempoStack
        format: yaml
    - podLogs:
        selector: app.kubernetes.io/managed-by=tempo-operator
  - name: Run the must-gather and verify the contents
    try:
    - command:
        entrypoint: oc
        args:
        - get
        - pods
        - -A
        - -l control-plane=controller-manager
        - -l app.kubernetes.io/name=tempo-operator
        - -o 
        - jsonpath={.items[0].metadata.namespace}
        outputs:
        - name: TEMPO_NAMESPACE
          value: ($stdout)
    - script:
        env:
        - name: temponamespace
          value: ($TEMPO_NAMESPACE)
        timeout: 5m
        content: ./check-must-gather.sh
